--- a/project3/index.html
+++ b/project3/index.html
@@ -18,7 +18,7 @@
         <p>pepple:{{name}}</p>
         <p>job:{{job}}</p>
         <a v-bind:href="web">我的个人博客</a>
-        {{website}}
+        <p v-html="website"></p>
         <input type="text" v-bind:value="name">
     </div>
 
